--- a/Graphics For Games/6) Scene Graph/Tutorial6.vcxproj.filters
+++ b/Graphics For Games/6) Scene Graph/Tutorial6.vcxproj.filters
@@ -2,5 +2,11 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="Tutorial6.cpp" />
+    <ClCompile Include="CubeRobot.cpp" />
+    <ClCompile Include="Renderer5.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CubeRobot.h" />
+    <ClInclude Include="Renderer5.h" />
   </ItemGroup>
 </Project>
