--- a/Graphics For Games/8) Index Buffers/Tutorial8.vcxproj
+++ b/Graphics For Games/8) Index Buffers/Tutorial8.vcxproj
@@ -128,7 +128,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Renderer5.cpp" />
     <ClCompile Include="tutorial8.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Renderer5.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
