Post processing, split screen

--- a/Graphics For Games/Extra - Drawing Text/Drawing Text.vcxproj
+++ b/Graphics For Games/Extra - Drawing Text/Drawing Text.vcxproj
@@ -32,7 +32,7 @@
     <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>MultiByte</CharacterSet>
     <PlatformToolset>v141</PlatformToolset>
