--- a/Graphics For Games/10) Post Processing/Tutorial10.vcxproj
+++ b/Graphics For Games/10) Post Processing/Tutorial10.vcxproj
@@ -128,7 +128,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Renderer10.cpp" />
     <ClCompile Include="Tutorial10.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Renderer10.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
