--- a/Graphics For Games/11) Per Fragment Lighting A/Tutorial11.vcxproj
+++ b/Graphics For Games/11) Per Fragment Lighting A/Tutorial11.vcxproj
@@ -128,7 +128,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Renderer11.cpp" />
     <ClCompile Include="Tutorial11.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Renderer11.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
