--- a/Graphics For Games/12) Per Fragment Lighting B/Tutorial12.vcxproj
+++ b/Graphics For Games/12) Per Fragment Lighting B/Tutorial12.vcxproj
@@ -128,7 +128,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Renderer12.cpp" />
     <ClCompile Include="Tutorial12.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Renderer12.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
