--- a/nclgl/nclgl.vcxproj.filters
+++ b/nclgl/nclgl.vcxproj.filters
@@ -1,11 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="MD5Anim.cpp" />
-    <ClCompile Include="MD5FileData.cpp" />
-    <ClCompile Include="MD5Node.cpp" />
     <ClCompile Include="Shader.cpp">
-      <Filter>My Code</Filter>
+      <Filter>Shader</Filter>
     </ClCompile>
     <ClCompile Include="Mouse.cpp">
       <Filter>Input</Filter>
@@ -43,23 +40,33 @@
     <ClCompile Include="OBJMesh.cpp">
       <Filter>Mesh</Filter>
     </ClCompile>
-    <ClCompile Include="MD5Mesh.cpp" />
     <ClCompile Include="HeightMap.cpp">
       <Filter>Mesh</Filter>
+    </ClCompile>
+    <ClCompile Include="TextMesh.cpp" />
+    <ClCompile Include="Light.cpp">
+      <Filter>Rendering</Filter>
+    </ClCompile>
+    <ClCompile Include="MD5Node.cpp">
+      <Filter>Mesh\MD5</Filter>
+    </ClCompile>
+    <ClCompile Include="MD5Mesh.cpp">
+      <Filter>Mesh\MD5</Filter>
+    </ClCompile>
+    <ClCompile Include="MD5FileData.cpp">
+      <Filter>Mesh\MD5</Filter>
+    </ClCompile>
+    <ClCompile Include="MD5Anim.cpp">
+      <Filter>Mesh\MD5</Filter>
     </ClCompile>
     <ClCompile Include="Window.cpp">
       <Filter>Rendering</Filter>
     </ClCompile>
-    <ClCompile Include="Light.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ChildMeshInterface.h" />
     <ClInclude Include="common.h" />
-    <ClInclude Include="MD5Anim.h" />
-    <ClInclude Include="MD5FileData.h" />
-    <ClInclude Include="MD5Node.h" />
     <ClInclude Include="Shader.h">
-      <Filter>My Code</Filter>
+      <Filter>Shader</Filter>
     </ClInclude>
     <ClInclude Include="Mouse.h">
       <Filter>Input</Filter>
@@ -100,9 +107,6 @@
     <ClInclude Include="Plane.h">
       <Filter>Rendering</Filter>
     </ClInclude>
-    <ClInclude Include="Window.h">
-      <Filter>Rendering</Filter>
-    </ClInclude>
     <ClInclude Include="GameTimer.h">
       <Filter>Maths</Filter>
     </ClInclude>
@@ -112,16 +116,33 @@
     <ClInclude Include="OBJMesh.h">
       <Filter>Mesh</Filter>
     </ClInclude>
-    <ClInclude Include="MD5Mesh.h" />
     <ClInclude Include="HeightMap.h">
       <Filter>Mesh</Filter>
     </ClInclude>
-    <ClInclude Include="Light.h" />
+    <ClInclude Include="TextMesh.h" />
+    <ClInclude Include="Light.h">
+      <Filter>Rendering</Filter>
+    </ClInclude>
+    <ClInclude Include="MD5Node.h">
+      <Filter>Mesh\MD5</Filter>
+    </ClInclude>
+    <ClInclude Include="MD5Mesh.h">
+      <Filter>Mesh\MD5</Filter>
+    </ClInclude>
+    <ClInclude Include="MD5FileData.h">
+      <Filter>Mesh\MD5</Filter>
+    </ClInclude>
+    <ClInclude Include="MD5Anim.h">
+      <Filter>Mesh\MD5</Filter>
+    </ClInclude>
+    <ClInclude Include="ChildMeshInterface.h">
+      <Filter>Mesh</Filter>
+    </ClInclude>
+    <ClInclude Include="Window.h">
+      <Filter>Rendering</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Filter Include="My Code">
-      <UniqueIdentifier>{d680df6e-9951-401b-a0e9-ac0d519c9059}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Input">
       <UniqueIdentifier>{e01803f7-e610-459a-9698-b2f88c239792}</UniqueIdentifier>
     </Filter>
@@ -133,6 +154,12 @@
     </Filter>
     <Filter Include="Mesh">
       <UniqueIdentifier>{c823e28a-db45-4980-b685-64767dd55704}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Mesh\MD5">
+      <UniqueIdentifier>{8768575f-00d5-4412-bb83-17c13bac8f19}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Shader">
+      <UniqueIdentifier>{d680df6e-9951-401b-a0e9-ac0d519c9059}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
