--- a/Graphics For Games/9) Skeletal Animation/Tutorial9.vcxproj
+++ b/Graphics For Games/9) Skeletal Animation/Tutorial9.vcxproj
@@ -22,6 +22,7 @@
     <ProjectGuid>{9FB8682D-BD52-4B33-B37D-D6C2141B67DE}</ProjectGuid>
     <RootNamespace>Tutorial1</RootNamespace>
     <ProjectName>Tutorial 09 - Skeletal Animation</ProjectName>
+    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
